// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`AppearanceEditor > should render correctly with background color binding 1`] = `
<div>
  <div
    class="awsui_root_14mhv_av9zi_174"
    data-analytics-field-label="[id="formField:rk:-label"]"
  >
    <div
      class=""
    >
      <label
        class="awsui_label_14mhv_av9zi_210"
        for="formField:rk:"
        id="formField:rk:-label"
      >
        Indicator appearance
      </label>
    </div>
    <div
      class="awsui_controls_14mhv_av9zi_246"
    >
      <div
        class="awsui_grid_14yj0_1lwse_99"
      >
        <div
          class="awsui_grid-column_14yj0_1lwse_143 awsui_colspan-12_14yj0_1lwse_264"
        >
          <div
            class="awsui_restore-pointer-events_14yj0_1lwse_314"
          >
            <div
              class="awsui_control_14mhv_av9zi_246"
            >
              <div
                class="awsui_root_18582_z63vw_99 awsui_vertical_18582_z63vw_146 awsui_vertical-s_18582_z63vw_158"
              >
                <div
                  class="awsui_child_18582_z63vw_103"
                >
                  <div
                    class="awsui_grid_14yj0_1lwse_99"
                  >
                    <div
                      class="awsui_grid-column_14yj0_1lwse_143 awsui_colspan-10_14yj0_1lwse_244"
                    >
                      <div
                        class="awsui_restore-pointer-events_14yj0_1lwse_314"
                      >
                        <div
                          class="awsui_root_r2vco_wvvus_99"
                          data-testid="motion-indicator-color-type-select"
                        >
                          <div
                            class="awsui_root_qwoo0_1ea5w_149"
                          >
                            <div
                              class=""
                              id=":rq:"
                            >
                              <button
                                aria-expanded="false"
                                aria-haspopup="listbox"
                                aria-labelledby="formField:rk:-label select-arialabel-:ro: trigger-content-:rs:"
                                class="awsui_button-trigger_18eso_syr88_103 awsui_has-caret_18eso_syr88_170"
                                id="formField:rk:"
                                type="button"
                              >
                                <span
                                  class="awsui_trigger_dwuol_18z0d_122"
                                  id="trigger-content-:rs:"
                                >
                                  Arrow with background
                                </span>
                                <span
                                  class="awsui_arrow_18eso_syr88_103"
                                >
                                  <span
                                    class="awsui_icon_h11ix_1l964_104 awsui_size-normal-mapped-height_h11ix_1l964_158 awsui_size-normal_h11ix_1l964_154 awsui_variant-normal_h11ix_1l964_230"
                                  >
                                    <svg
                                      aria-hidden="true"
                                      focusable="false"
                                      viewBox="0 0 16 16"
                                      xmlns="http://www.w3.org/2000/svg"
                                    >
                                      <path
                                        class="filled stroke-linejoin-round"
                                        d="M4 5h8l-4 6-4-6z"
                                      />
                                    </svg>
                                  </span>
                                </span>
                              </button>
                            </div>
                            <div
                              tabindex="-1"
                            />
                            <div>
                              <div
                                tabindex="-1"
                              />
                              <div
                                aria-hidden="true"
                                class="awsui_dropdown_qwoo0_1ea5w_99 awsui-visual-refresh awsui_hide-block-border_qwoo0_1ea5w_281 awsui_refresh_qwoo0_1ea5w_120 awsui_stretch-beyond-trigger-width_qwoo0_1ea5w_277"
                                data-animating="false"
                                data-open="false"
                                id="dialog:rn:"
                                style="--awsui-dropdown-default-max-width-iof9y8: 465px;"
                              >
                                <div
                                  class="awsui_dropdown-content-wrapper_qwoo0_1ea5w_99 awsui_refresh_qwoo0_1ea5w_120"
                                >
                                  <div
                                    class="awsui_dropdown-content_qwoo0_1ea5w_99"
                                  >
                                    <ul
                                      aria-labelledby="select-arialabel-:ro: formField:rk:"
                                      class="awsui_options-list_19gcf_halkh_99"
                                      id="option-list:rm:"
                                      role="listbox"
                                      style="position: relative;"
                                      tabindex="-1"
                                    />
                                    <div
                                      class="awsui_root_1afi9_5kqbd_99 awsui_hidden_1afi9_5kqbd_133"
                                    >
                                      <div
                                        id="footer:rp:"
                                      />
                                      <span
                                        class="awsui_root_xttbq_pgwjg_99 awsui_root_3bgfn_im8v7_5"
                                      >
                                        <span
                                          aria-atomic="true"
                                          aria-live="polite"
                                        />
                                      </span>
                                    </div>
                                  </div>
                                </div>
                              </div>
                              <div
                                tabindex="-1"
                              />
                            </div>
                          </div>
                          <span
                            class="awsui_root_xttbq_pgwjg_99"
                            id="select-arialabel-:ro:"
                          />
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="awsui_child_18582_z63vw_103"
                >
                  <div
                    class="awsui_root_14mhv_av9zi_174"
                    data-analytics-field-label="[id="formField:rt:-label"]"
                  >
                    <div
                      class=""
                    >
                      <label
                        class="awsui_label_14mhv_av9zi_210"
                        for="formField:rt:"
                        id="formField:rt:-label"
                      >
                        Arrow
                      </label>
                    </div>
                    <div
                      class="awsui_controls_14mhv_av9zi_246"
                    >
                      <div
                        class="awsui_grid_14yj0_1lwse_99"
                      >
                        <div
                          class="awsui_grid-column_14yj0_1lwse_143 awsui_colspan-12_14yj0_1lwse_264"
                        >
                          <div
                            class="awsui_restore-pointer-events_14yj0_1lwse_314"
                          >
                            <div
                              class="awsui_control_14mhv_av9zi_246"
                            >
                              <div
                                class="awsui_root_18wu0_1elzt_99 awsui_box_18wu0_1elzt_219 awsui_d-inline_18wu0_1elzt_1039 awsui_color-default_18wu0_1elzt_219 awsui_font-size-default_18wu0_1elzt_235 awsui_font-weight-default_18wu0_1elzt_275"
                              >
                                # of arrows
                                <div
                                  style="width: 37px; display: inline-block; margin-left: 13px;"
                                >
                                  <div
                                    class="awsui_root_2rhyz_15wpl_99 awsui_input-container_2rhyz_15wpl_262"
                                    data-testid="motion-indicator-arrow-number-input"
                                  >
                                    <input
                                      aria-labelledby="formField:rk:-label formField:rt:-label"
                                      autocomplete="on"
                                      class="awsui_input_2rhyz_15wpl_103"
                                      id="formField:rt:"
                                      inputmode="numeric"
                                      type="text"
                                      value="4"
                                    />
                                  </div>
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="awsui_child_18582_z63vw_103"
                >
                  <div
                    component="[object Object]"
                    data-mocked="ColorEditor"
                    id="ColorEditor"
                    selectedcolortype="backgroundColor"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`AppearanceEditor > should render correctly with foreground color binding 1`] = `
<div>
  <div
    class="awsui_root_14mhv_av9zi_174"
    data-analytics-field-label="[id="formField:ra:-label"]"
  >
    <div
      class=""
    >
      <label
        class="awsui_label_14mhv_av9zi_210"
        for="formField:ra:"
        id="formField:ra:-label"
      >
        Indicator appearance
      </label>
    </div>
    <div
      class="awsui_controls_14mhv_av9zi_246"
    >
      <div
        class="awsui_grid_14yj0_1lwse_99"
      >
        <div
          class="awsui_grid-column_14yj0_1lwse_143 awsui_colspan-12_14yj0_1lwse_264"
        >
          <div
            class="awsui_restore-pointer-events_14yj0_1lwse_314"
          >
            <div
              class="awsui_control_14mhv_av9zi_246"
            >
              <div
                class="awsui_root_18582_z63vw_99 awsui_vertical_18582_z63vw_146 awsui_vertical-s_18582_z63vw_158"
              >
                <div
                  class="awsui_child_18582_z63vw_103"
                >
                  <div
                    class="awsui_grid_14yj0_1lwse_99"
                  >
                    <div
                      class="awsui_grid-column_14yj0_1lwse_143 awsui_colspan-10_14yj0_1lwse_244"
                    >
                      <div
                        class="awsui_restore-pointer-events_14yj0_1lwse_314"
                      >
                        <div
                          class="awsui_root_r2vco_wvvus_99"
                          data-testid="motion-indicator-color-type-select"
                        >
                          <div
                            class="awsui_root_qwoo0_1ea5w_149"
                          >
                            <div
                              class=""
                              id=":rg:"
                            >
                              <button
                                aria-expanded="false"
                                aria-haspopup="listbox"
                                aria-labelledby="formField:ra:-label select-arialabel-:re: trigger-content-:ri:"
                                class="awsui_button-trigger_18eso_syr88_103 awsui_has-caret_18eso_syr88_170"
                                id="formField:ra:"
                                type="button"
                              >
                                <span
                                  class="awsui_trigger_dwuol_18z0d_122"
                                  id="trigger-content-:ri:"
                                >
                                  Arrow color
                                </span>
                                <span
                                  class="awsui_arrow_18eso_syr88_103"
                                >
                                  <span
                                    class="awsui_icon_h11ix_1l964_104 awsui_size-normal-mapped-height_h11ix_1l964_158 awsui_size-normal_h11ix_1l964_154 awsui_variant-normal_h11ix_1l964_230"
                                  >
                                    <svg
                                      aria-hidden="true"
                                      focusable="false"
                                      viewBox="0 0 16 16"
                                      xmlns="http://www.w3.org/2000/svg"
                                    >
                                      <path
                                        class="filled stroke-linejoin-round"
                                        d="M4 5h8l-4 6-4-6z"
                                      />
                                    </svg>
                                  </span>
                                </span>
                              </button>
                            </div>
                            <div
                              tabindex="-1"
                            />
                            <div>
                              <div
                                tabindex="-1"
                              />
                              <div
                                aria-hidden="true"
                                class="awsui_dropdown_qwoo0_1ea5w_99 awsui-visual-refresh awsui_hide-block-border_qwoo0_1ea5w_281 awsui_refresh_qwoo0_1ea5w_120 awsui_stretch-beyond-trigger-width_qwoo0_1ea5w_277"
                                data-animating="false"
                                data-open="false"
                                id="dialog:rd:"
                                style="--awsui-dropdown-default-max-width-iof9y8: 465px;"
                              >
                                <div
                                  class="awsui_dropdown-content-wrapper_qwoo0_1ea5w_99 awsui_refresh_qwoo0_1ea5w_120"
                                >
                                  <div
                                    class="awsui_dropdown-content_qwoo0_1ea5w_99"
                                  >
                                    <ul
                                      aria-labelledby="select-arialabel-:re: formField:ra:"
                                      class="awsui_options-list_19gcf_halkh_99"
                                      id="option-list:rc:"
                                      role="listbox"
                                      style="position: relative;"
                                      tabindex="-1"
                                    />
                                    <div
                                      class="awsui_root_1afi9_5kqbd_99 awsui_hidden_1afi9_5kqbd_133"
                                    >
                                      <div
                                        id="footer:rf:"
                                      />
                                      <span
                                        class="awsui_root_xttbq_pgwjg_99 awsui_root_3bgfn_im8v7_5"
                                      >
                                        <span
                                          aria-atomic="true"
                                          aria-live="polite"
                                        />
                                      </span>
                                    </div>
                                  </div>
                                </div>
                              </div>
                              <div
                                tabindex="-1"
                              />
                            </div>
                          </div>
                          <span
                            class="awsui_root_xttbq_pgwjg_99"
                            id="select-arialabel-:re:"
                          />
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="awsui_child_18582_z63vw_103"
                >
                  <div
                    class="awsui_root_14mhv_av9zi_174"
                    data-analytics-field-label="[id="formField:rj:-label"]"
                  >
                    <div
                      class=""
                    >
                      <label
                        class="awsui_label_14mhv_av9zi_210"
                        for="formField:rj:"
                        id="formField:rj:-label"
                      >
                        Arrow
                      </label>
                    </div>
                    <div
                      class="awsui_controls_14mhv_av9zi_246"
                    >
                      <div
                        class="awsui_grid_14yj0_1lwse_99"
                      >
                        <div
                          class="awsui_grid-column_14yj0_1lwse_143 awsui_colspan-12_14yj0_1lwse_264"
                        >
                          <div
                            class="awsui_restore-pointer-events_14yj0_1lwse_314"
                          >
                            <div
                              class="awsui_control_14mhv_av9zi_246"
                            >
                              <div
                                class="awsui_root_18wu0_1elzt_99 awsui_box_18wu0_1elzt_219 awsui_d-inline_18wu0_1elzt_1039 awsui_color-default_18wu0_1elzt_219 awsui_font-size-default_18wu0_1elzt_235 awsui_font-weight-default_18wu0_1elzt_275"
                              >
                                # of arrows
                                <div
                                  style="width: 37px; display: inline-block; margin-left: 13px;"
                                >
                                  <div
                                    class="awsui_root_2rhyz_15wpl_99 awsui_input-container_2rhyz_15wpl_262"
                                    data-testid="motion-indicator-arrow-number-input"
                                  >
                                    <input
                                      aria-labelledby="formField:ra:-label formField:rj:-label"
                                      autocomplete="on"
                                      class="awsui_input_2rhyz_15wpl_103"
                                      id="formField:rj:"
                                      inputmode="numeric"
                                      type="text"
                                      value="4"
                                    />
                                  </div>
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="awsui_child_18582_z63vw_103"
                >
                  <div
                    component="[object Object]"
                    data-mocked="ColorEditor"
                    id="ColorEditor"
                    selectedcolortype="foregroundColor"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`AppearanceEditor > should render correctly without data binding 1`] = `
<div>
  <div
    class="awsui_root_14mhv_av9zi_174"
    data-analytics-field-label="[id="formField:r0:-label"]"
  >
    <div
      class=""
    >
      <label
        class="awsui_label_14mhv_av9zi_210"
        for="formField:r0:"
        id="formField:r0:-label"
      >
        Indicator appearance
      </label>
    </div>
    <div
      class="awsui_controls_14mhv_av9zi_246"
    >
      <div
        class="awsui_grid_14yj0_1lwse_99"
      >
        <div
          class="awsui_grid-column_14yj0_1lwse_143 awsui_colspan-12_14yj0_1lwse_264"
        >
          <div
            class="awsui_restore-pointer-events_14yj0_1lwse_314"
          >
            <div
              class="awsui_control_14mhv_av9zi_246"
            >
              <div
                class="awsui_root_18582_z63vw_99 awsui_vertical_18582_z63vw_146 awsui_vertical-s_18582_z63vw_158"
              >
                <div
                  class="awsui_child_18582_z63vw_103"
                >
                  <div
                    class="awsui_grid_14yj0_1lwse_99"
                  >
                    <div
                      class="awsui_grid-column_14yj0_1lwse_143 awsui_colspan-10_14yj0_1lwse_244"
                    >
                      <div
                        class="awsui_restore-pointer-events_14yj0_1lwse_314"
                      >
                        <div
                          class="awsui_root_r2vco_wvvus_99"
                          data-testid="motion-indicator-color-type-select"
                        >
                          <div
                            class="awsui_root_qwoo0_1ea5w_149"
                          >
                            <div
                              class=""
                              id=":r6:"
                            >
                              <button
                                aria-expanded="false"
                                aria-haspopup="listbox"
                                aria-labelledby="formField:r0:-label select-arialabel-:r4: trigger-content-:r8:"
                                class="awsui_button-trigger_18eso_syr88_103 awsui_has-caret_18eso_syr88_170"
                                id="formField:r0:"
                                type="button"
                              >
                                <span
                                  class="awsui_trigger_dwuol_18z0d_122"
                                  id="trigger-content-:r8:"
                                >
                                  Arrow with background
                                </span>
                                <span
                                  class="awsui_arrow_18eso_syr88_103"
                                >
                                  <span
                                    class="awsui_icon_h11ix_1l964_104 awsui_size-normal-mapped-height_h11ix_1l964_158 awsui_size-normal_h11ix_1l964_154 awsui_variant-normal_h11ix_1l964_230"
                                  >
                                    <svg
                                      aria-hidden="true"
                                      focusable="false"
                                      viewBox="0 0 16 16"
                                      xmlns="http://www.w3.org/2000/svg"
                                    >
                                      <path
                                        class="filled stroke-linejoin-round"
                                        d="M4 5h8l-4 6-4-6z"
                                      />
                                    </svg>
                                  </span>
                                </span>
                              </button>
                            </div>
                            <div
                              tabindex="-1"
                            />
                            <div>
                              <div
                                tabindex="-1"
                              />
                              <div
                                aria-hidden="true"
                                class="awsui_dropdown_qwoo0_1ea5w_99 awsui-visual-refresh awsui_hide-block-border_qwoo0_1ea5w_281 awsui_refresh_qwoo0_1ea5w_120 awsui_stretch-beyond-trigger-width_qwoo0_1ea5w_277"
                                data-animating="false"
                                data-open="false"
                                id="dialog:r3:"
                                style="--awsui-dropdown-default-max-width-iof9y8: 465px;"
                              >
                                <div
                                  class="awsui_dropdown-content-wrapper_qwoo0_1ea5w_99 awsui_refresh_qwoo0_1ea5w_120"
                                >
                                  <div
                                    class="awsui_dropdown-content_qwoo0_1ea5w_99"
                                  >
                                    <ul
                                      aria-labelledby="select-arialabel-:r4: formField:r0:"
                                      class="awsui_options-list_19gcf_halkh_99"
                                      id="option-list:r2:"
                                      role="listbox"
                                      style="position: relative;"
                                      tabindex="-1"
                                    />
                                    <div
                                      class="awsui_root_1afi9_5kqbd_99 awsui_hidden_1afi9_5kqbd_133"
                                    >
                                      <div
                                        id="footer:r5:"
                                      />
                                      <span
                                        class="awsui_root_xttbq_pgwjg_99 awsui_root_3bgfn_im8v7_5"
                                      >
                                        <span
                                          aria-atomic="true"
                                          aria-live="polite"
                                        />
                                      </span>
                                    </div>
                                  </div>
                                </div>
                              </div>
                              <div
                                tabindex="-1"
                              />
                            </div>
                          </div>
                          <span
                            class="awsui_root_xttbq_pgwjg_99"
                            id="select-arialabel-:r4:"
                          />
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="awsui_child_18582_z63vw_103"
                >
                  <div
                    class="awsui_root_14mhv_av9zi_174"
                    data-analytics-field-label="[id="formField:r9:-label"]"
                  >
                    <div
                      class=""
                    >
                      <label
                        class="awsui_label_14mhv_av9zi_210"
                        for="formField:r9:"
                        id="formField:r9:-label"
                      >
                        Arrow
                      </label>
                    </div>
                    <div
                      class="awsui_controls_14mhv_av9zi_246"
                    >
                      <div
                        class="awsui_grid_14yj0_1lwse_99"
                      >
                        <div
                          class="awsui_grid-column_14yj0_1lwse_143 awsui_colspan-12_14yj0_1lwse_264"
                        >
                          <div
                            class="awsui_restore-pointer-events_14yj0_1lwse_314"
                          >
                            <div
                              class="awsui_control_14mhv_av9zi_246"
                            >
                              <div
                                class="awsui_root_18wu0_1elzt_99 awsui_box_18wu0_1elzt_219 awsui_d-inline_18wu0_1elzt_1039 awsui_color-default_18wu0_1elzt_219 awsui_font-size-default_18wu0_1elzt_235 awsui_font-weight-default_18wu0_1elzt_275"
                              >
                                # of arrows
                                <div
                                  style="width: 37px; display: inline-block; margin-left: 13px;"
                                >
                                  <div
                                    class="awsui_root_2rhyz_15wpl_99 awsui_input-container_2rhyz_15wpl_262"
                                    data-testid="motion-indicator-arrow-number-input"
                                  >
                                    <input
                                      aria-labelledby="formField:r0:-label formField:r9:-label"
                                      autocomplete="on"
                                      class="awsui_input_2rhyz_15wpl_103"
                                      id="formField:r9:"
                                      inputmode="numeric"
                                      type="text"
                                      value="4"
                                    />
                                  </div>
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="awsui_child_18582_z63vw_103"
                >
                  <div
                    component="[object Object]"
                    data-mocked="ColorEditor"
                    id="ColorEditor"
                    selectedcolortype="backgroundColor"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
